--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,74 @@
             overflow: hidden;
             margin: 0px;
         }
+
+        .ui {
+            position: absolute;
+        }
+
+        button {
+            margin: 10px;
+            position: relative;
+            display: inline-block;
+            cursor: pointer;
+            outline: none;
+            border: 0;
+            vertical-align: middle;
+            text-decoration: none;
+            font-size: inherit;
+            font-family: inherit;
+            background-color: darkgray;
+        }
+        .sidebar {
+            height: 100%;
+            width: 0;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+        }
+
+        .sidebar a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidebar a:hover {
+            color: #f1f1f1;
+        }
+
+        .sidebar .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
+
+        .openbtn {
+            font-size: 20px;
+            cursor: pointer;
+            background-color: #111;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+        }
+
+        .openbtn:hover {
+            background-color: #444;
+        }
+
+        #main {
+            transition: margin-left .5s;
+        }
     </style>
 
 <script type="module" src="client.js" onload="connectToWebSocketServer()"></script>
@@ -13,6 +81,29 @@
 </head>
 
 <body>
+    <div style="width:100%;height:50px;text-align: center; color:white; top:10px" class="ui">Project name</div>
+    <div id="mySidebar" class="sidebar">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="#">Haus</a>
+        <a href="#">Stadt</a>
+        <a href="#">Test</a>
+        <a href="#">3d model</a>
+    </div>
+      
+    <div id="main">
+        <button class="openbtn ui" onclick="openNav()">☰</button>
+    </div>
+    <script>
+        function openNav() {
+          document.getElementById("mySidebar").style.width = "250px";
+          document.getElementById("main").style.marginLeft = "250px";
+        }
+        
+        function closeNav() {
+          document.getElementById("mySidebar").style.width = "0";
+          document.getElementById("main").style.marginLeft= "0";
+        }
+    </script>
 </body>
 
 </html> 
