--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,30 @@
             padding-top: 60px;
         }
 
+        .sidebar th {
+            color:white;
+        }
+
+        .sidebar td {
+            width: 100px;
+        }
+        .sidebar th {
+            text-align: left;
+            width: 100px;
+        }
+        .sidebar tr {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidebar tr:hover {
+            color: #f1f1f1;
+        }
+
         .sidebar a {
             padding: 8px 8px 8px 32px;
             text-decoration: none;
@@ -84,10 +108,16 @@
     <div style="width:100%;height:50px;text-align: center; color:white; top:10px" class="ui">Project name</div>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-        <a href="#">Haus</a>
-        <a href="#">Stadt</a>
-        <a href="#">Test</a>
-        <a href="#">3d model</a>
+        <table id="myTable" class="table" style="display: table-header-group;">
+            <thead>
+              <tr>
+                <th>Project</th>
+                <th>Users</th>
+              </tr>
+            </thead>
+            <tbody id="testBody">
+            </tbody>
+          </table>
     </div>
       
     <div id="main">
@@ -103,6 +133,21 @@
           document.getElementById("mySidebar").style.width = "0";
           document.getElementById("main").style.marginLeft= "0";
         }
+        const items1 = [
+            { project: "3d model", numberUsers: 2 },
+            { project: "Stadt", numberUsers: 0 },
+        ];
+        function loadTableData(items) {
+            const table = document.getElementById("testBody");
+            items.forEach( item => {
+            let row = table.insertRow();
+            let project = row.insertCell(0);
+            project.innerHTML = item.project;
+            let numberUsers = row.insertCell(1);
+            numberUsers.innerHTML = item.numberUsers;
+            });
+        }
+        loadTableData(items1);
     </script>
 </body>
 
