--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
 <body>
     <div style="width:100%;height:50px;text-align: center; color:white; top:10px" class="ui">Project name</div>
     <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+        <a href="javascript:void(0)" class="closebtn" onclick="triggerNav()">×</a>
         <table id="myTable" class="table" style="display: table-header-group;">
             <thead>
               <tr>
@@ -121,18 +121,22 @@
     </div>
       
     <div id="main">
-        <button class="openbtn ui" onclick="openNav()">☰</button>
+        <button class="openbtn ui" onclick="triggerNav()">☰</button>
     </div>
     <script>
-        function openNav() {
-          document.getElementById("mySidebar").style.width = "250px";
-          document.getElementById("main").style.marginLeft = "250px";
+        var navOpen = false;
+        function triggerNav() {
+            if (navOpen){
+                document.getElementById("mySidebar").style.width = "0";
+                document.getElementById("main").style.marginLeft= "0";
+                navOpen = false;
+            }else{
+                document.getElementById("mySidebar").style.width = "250px";
+                document.getElementById("main").style.marginLeft = "250px";
+                navOpen = true;
+            }
         }
         
-        function closeNav() {
-          document.getElementById("mySidebar").style.width = "0";
-          document.getElementById("main").style.marginLeft= "0";
-        }
         const items1 = [
             { project: "3d model", numberUsers: 2 },
             { project: "Stadt", numberUsers: 0 },
