added function to save 3d files

--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,7 @@
             <tbody id="testBody">
             </tbody>
           </table>
+          <button class="openbtn ui">+</button>
     </div>
       
     <div id="main">
