--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,6 @@
         }
 
         button {
-            margin: 10px;
             position: relative;
             display: inline-block;
             cursor: pointer;
@@ -42,11 +41,11 @@
         }
 
         .sidebar td {
-            width: 100px;
+            width: 150px;
         }
         .sidebar th {
             text-align: left;
-            width: 100px;
+            width: 150px;
         }
         .sidebar tr {
             padding: 8px 8px 8px 32px;
@@ -54,7 +53,7 @@
             font-size: 25px;
             color: #818181;
             display: block;
-            transition: 0.3s;
+            transition: 0.2s;
         }
 
         .sidebar tr:hover {
@@ -62,24 +61,15 @@
         }
 
         .sidebar a {
-            padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 25px;
-            color: #818181;
+            color: #f1f1f1;
             display: block;
-            transition: 0.3s;
+            transition: 0.2s;
         }
 
         .sidebar a:hover {
-            color: #f1f1f1;
-        }
-
-        .sidebar .closebtn {
-            position: absolute;
-            top: 0;
-            right: 25px;
-            font-size: 36px;
-            margin-left: 50px;
+            color: #818181;
         }
 
         .openbtn {
@@ -87,7 +77,6 @@
             cursor: pointer;
             background-color: #111;
             color: white;
-            padding: 10px 15px;
             border: none;
         }
 
@@ -95,19 +84,29 @@
             background-color: #444;
         }
 
+        .addProjectBar {
+            height: 40px;
+            line-height: 40px;
+            text-align: center;
+            float: left;
+        }
+        
+        #projectName {
+            width:110px;
+            padding: 0px;
+            border-width: 0px;
+        }
+
         #main {
             transition: margin-left .5s;
         }
     </style>
 
-<script type="module" src="client.js" onload="connectToWebSocketServer()"></script>
-</script>
 </head>
 
 <body>
     <div style="width:100%;height:50px;text-align: center; color:white; top:10px" class="ui">Project name</div>
     <div id="mySidebar" class="sidebar">
-        <a href="javascript:void(0)" class="closebtn" onclick="triggerNav()">×</a>
         <table id="myTable" class="table" style="display: table-header-group;">
             <thead>
               <tr>
@@ -117,23 +116,32 @@
             </thead>
             <tbody id="testBody">
             </tbody>
-          </table>
-          <button class="openbtn ui">+</button>
-    </div>
+        </table>
+        <form style="margin-left: 32px;" class="addProjectBar">
+            <input type="text" id="projectName" name="projectName" value="Name" class="addProjectBar">
+            <div id="drop-area" class="addProjectBar">
+                <a ref="#" class="addProjectBar" style="background-color: gray; width: 150px;">drop here</a>
+            </div>
+            <button class="openbtn ui addProjectBar" style="width: 40px;">+</button>
+        </form>
+    </div> 
       
     <div id="main">
-        <button class="openbtn ui" onclick="triggerNav()">☰</button>
+        <button id="sidebarButton" class="openbtn ui" style="margin: 10px; padding:10px 15px;" onclick="triggerNav()">☰</button>
     </div>
+  
     <script>
         var navOpen = false;
         function triggerNav() {
             if (navOpen){
                 document.getElementById("mySidebar").style.width = "0";
                 document.getElementById("main").style.marginLeft= "0";
+                document.getElementById("sidebarButton").innerHTML = "☰";
                 navOpen = false;
             }else{
-                document.getElementById("mySidebar").style.width = "250px";
-                document.getElementById("main").style.marginLeft = "250px";
+                document.getElementById("mySidebar").style.width = "350px";
+                document.getElementById("main").style.marginLeft = "350px";
+                document.getElementById("sidebarButton").innerHTML = "×";
                 navOpen = true;
             }
         }
@@ -154,6 +162,8 @@
         }
         loadTableData(items1);
     </script>
+<script type="module" src="client.js"></script>
+</script>
 </body>
 
 </html> 
