--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             text-align: left;
             width: 150px;
         }
-        .sidebar tr {
+        .sidebar tr{
             padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 25px;
@@ -55,6 +55,15 @@
             display: block;
             transition: 0.2s;
         }
+
+        .sidebar label {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: #818181;
+            display: float;
+        }
+
 
         .sidebar tr:hover {
             color: #f1f1f1;
@@ -109,6 +118,12 @@
 <body>
     <div style="width:100%;height:50px;text-align: center; color:white; top:10px" class="ui">Project name</div>
     <div id="mySidebar" class="sidebar">
+        <form action="/userName" method="POST">
+            <label for="name" >Name:</label>
+            <input id="name" type="text" name="test1" size="20" maxlength="15" >
+        </form>
+        <br>
+        <br>
         <table id="myTable" class="table" style="display: table-header-group;">
             <thead>
               <tr>
